# rent-price-and-election-results-berlin

./: Interpretation.docx  README.md  config.yaml  envp.yml  main.py  pyproject.toml
.ipynb_checkpoints/: config-checkpoint.yaml
SQL/: 1.sql  column correction in datasets.sql  data based on year 2017.sql  data based on year 2021.sql  data based on year 2025.sql
data/clean/: analysis_2017_clean.csv  analysis_2021_clean.csv  analysis_2025_clean.csv  analysis_longitudinal_with_deltas.csv  bezirksgrenzen.geojson  bezirksgrenzen_fixed.geojson  election_2017_clean.csv  election_2021_clean.csv  election_2025_clean.csv  election_2025_clean2.csv
data/raw/: btw2025kreis.csv
data/raw/Economy/: AfS_Tabellen_Sozialbericht_2024_BBB.xlsx  Gini.csv  poverty.csv  unemployment.csv
data/raw/Election/: 2025_Election.csv
data/raw/Poverty/: ~$AfS_Tabellen_Sozialbericht_2024_BBB.xlsx
data/raw/Rent_price/: mietentwicklung_berlin_2016-17.csv  mietentwicklung_berlin_2016-17.xlsx  (+7 more)
notebooks/: 1 Poverty.ipynb  1 data_wrangling_election.ipynb  1 data_wrangling_rent.ipynb  2 SQL.ipynb  2 SQL_LM.ipynb  3 Python Analysis-2017.ipynb  3 Python Analysis.ipynb  Python Analysis.ipynb  SQL.ipynb  SQL_LM.ipynb  berlin_districts_utf8.geojson  data_wrangling.ipynb  data_wrangling_election.ipynb  data_wrangling_rent.ipynb  functions.py
notebooks/.ipynb_checkpoints/: 1 Geojson correction-checkpoint.ipynb  1 data_wrangling_election-checkpoint.ipynb  3 Python Analysis-2017-checkpoint.ipynb  SQL_LM-checkpoint.ipynb  data_wrangling-checkpoint.ipynb  web_scraping-checkpoint.ipynb
(+5 files in other folders)
