[project]
name = "rent-price-and-election-results-berlin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyproj>=3.7.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "statsmodels>=0.14.5",
]
